--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ieben Smessaert",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6"
   }
